--- a/AwesomePictures/Base.lproj/Main.storyboard
+++ b/AwesomePictures/Base.lproj/Main.storyboard
@@ -18,14 +18,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="picture" id="sai-Nz-30a">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="picture" id="sai-Nz-30a" customClass="PictureTableViewCell" customModule="AwesomePictures" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sai-Nz-30a" id="U2e-dT-0hJ">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0TQ-Mb-Gse">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0TQ-Mb-Gse">
                                             <rect key="frame" x="8" y="8" width="398" height="183.66666666666666"/>
                                         </imageView>
                                     </subviews>
@@ -36,6 +36,9 @@
                                         <constraint firstItem="0TQ-Mb-Gse" firstAttribute="top" secondItem="U2e-dT-0hJ" secondAttribute="top" constant="8" id="UVF-0k-jRK"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="pictureImageView" destination="0TQ-Mb-Gse" id="vOv-cC-d8J"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="text" rowHeight="75" id="J0r-Kh-Mp7">
                                 <rect key="frame" x="0.0" y="228" width="414" height="75"/>
